fix: remove css property visible from angle

--- a/client/src/components/slider/slider.css
+++ b/client/src/components/slider/slider.css
@@ -56,7 +56,6 @@
 	border-radius: 50%;
 	cursor: pointer;
 	transition: all 200ms ease-in-out;
-	visibility: visible;
 }
 .angle:hover{
 	scale: 1.1;
@@ -103,7 +102,5 @@
 		min-height: 250px;
 		max-height: 250px;
 	}
-	.angle {
-		visibility: hidden;
-	}
+
 }
